form_takima/TP-kube-02/front/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      containers:
      - image: registry.gitlab.com/takima-school/images/cdb/www:latest
        name: front
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: takima-school-registry
