form_takima/TP-kube-02/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
