form_takima/TP-kube-02/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: front.nicolas-lecaille.takima.school
      http:
        paths:
          - backend:
              service:
                name: front-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
